--- a/2023WinDistribution.ipynb
+++ b/2023WinDistribution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,6 +14,7 @@
     "import plotly.express as px\n",
     "from tqdm import tqdm\n",
     "import time\n",
+    "import random\n",
     "import multiprocessing as mp\n",
     "from threading import Thread\n",
     "from multiprocessing_functions import simulate_schedules, get_ranking"
@@ -585,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 300,
    "metadata": {},
    "outputs": [
     {
@@ -855,7 +856,7 @@
        "black8yellownation    26143    73810   190304   494787  1457574  7744980  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 300,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3214,6 +3215,381 @@
    "source": [
     "playoffs_df[playoffs_df[1] == 'tonygordzilla22']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 244,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.011275136797421e+25"
+      ]
+     },
+     "execution_count": 244,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# This cell estimates the total number possible season schedules.\n",
+    "\n",
+    "def generate_schedule_nums():\n",
+    "    \"\"\"This funciton is a modified verstion of the generate schedule function \n",
+    "    used in the multiprocessing function file. It aims to estimate the total \n",
+    "    number of possible schedules. \n",
+    "    \n",
+    "    Generates a 14 week season schedule for an 12 team leage. Each team plays\n",
+    "    all other teams once in the first 11 weeks. The first 3 weeks are repeated\n",
+    "    for the last 3 weeks.\n",
+    "\n",
+    "    Returns:\n",
+    "        list: A list of the number of schedules to choose from at each week\n",
+    "    each week.\n",
+    "    \"\"\"\n",
+    "    weeks = set(all_weeks)\n",
+    "    schedule = []\n",
+    "    num_options = []\n",
+    "\n",
+    "    # Recursively fills the weekly schedule at random\n",
+    "    def pick_week(weeks):\n",
+    "        if len(schedule) == 11:\n",
+    "            return\n",
+    "        else:\n",
+    "            tuple_weeks = tuple(weeks)\n",
+    "            num_options.append(len(tuple_weeks))\n",
+    "            choice = random.choice(tuple_weeks)\n",
+    "            schedule.append(choice)\n",
+    "            weeks -= similar_weeks[choice]\n",
+    "            pick_week(weeks)\n",
+    "    \n",
+    "    # The above method has about a 70% success rate to pick a valid yearly \n",
+    "    # schedule. This while loop will continue until a valid schedule is picked.\n",
+    "    while len(schedule) != 11:\n",
+    "        try:\n",
+    "            pick_week(weeks)\n",
+    "        except IndexError:\n",
+    "            weeks = set(all_weeks)\n",
+    "            schedule = []\n",
+    "            num_options = []\n",
+    "\n",
+    "    # Adds the first three weeks of the schedule to the end to finish the 14\n",
+    "    # week season\n",
+    "    schedule += schedule[:3]\n",
+    "\n",
+    "    total = 1\n",
+    "    for i in num_options:\n",
+    "        total *= i\n",
+    "\n",
+    "    return(total)\n",
+    "\n",
+    "np.array([generate_schedule_nums() for i in range(1000)]).mean() * .7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 297,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "|   rank | username           |   points_for |   points_against | record   |\n",
+      "|-------:|:-------------------|-------------:|-----------------:|:---------|\n",
+      "|      1 | pacc               |      2008.96 |          1765.22 | 9-5      |\n",
+      "|      2 | thezirconisdragon  |      2000.73 |          1895.99 | 9-5      |\n",
+      "|      3 | herbietime         |      2114.47 |          1990.59 | 8-6      |\n",
+      "|      4 | alecwilson         |      2107.2  |          1854.36 | 8-6      |\n",
+      "|      5 | empireyikesback    |      1798.42 |          1662.93 | 8-6      |\n",
+      "|      6 | burgertownthicnred |      1769.67 |          1778.89 | 8-6      |\n",
+      "|      7 | therealfergus      |      1814.81 |          2027.19 | 6-8      |\n",
+      "|      8 | mackjyers21        |      1730.29 |          1818.54 | 6-8      |\n",
+      "|      9 | shakylegs          |      1650.25 |          1838.57 | 6-8      |\n",
+      "|     10 | tonygordzilla22    |      1625.72 |          1735.48 | 6-8      |\n",
+      "|     11 | black8yellownation |      1495.6  |          1615.37 | 6-8      |\n",
+      "|     12 | namebrant          |      1645.83 |          1778.82 | 4-10     |\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Prints the season outcomes in markdown\n",
+    "outcome_2023 = owners_raw[[\"username\",\n",
+    "                           \"fpts\",\n",
+    "                           \"fpts_decimal\", \n",
+    "                           \"fpts_against\", \n",
+    "                           \"fpts_against_decimal\", \n",
+    "                           \"wins\", \n",
+    "                           \"losses\"]]\n",
+    "\n",
+    "def format_dec(x):\n",
+    "    out = str((x/100))[1:]\n",
+    "    if len(out) == 2:\n",
+    "        out = out + \"0\"\n",
+    "    return out\n",
+    "\n",
+    "outcome_2023 = (\n",
+    "    outcome_2023\n",
+    "    .assign(points_for = outcome_2023[\"fpts\"].astype(str) \n",
+    "            + (outcome_2023[\"fpts_decimal\"].apply(format_dec)))\n",
+    "    .assign(points_against = outcome_2023[\"fpts_against\"].astype(str) \n",
+    "            + (outcome_2023[\"fpts_against_decimal\"].apply(format_dec)))\n",
+    "    .assign(record = outcome_2023[\"wins\"].astype(str) + \"-\" \n",
+    "            + outcome_2023[\"losses\"].astype(str))\n",
+    "            )\n",
+    "outcome_2023 = pd.DataFrame(season_ranks).merge(\n",
+    "        outcome_2023,\n",
+    "        left_index=True, \n",
+    "        right_on='username')\n",
+    "\n",
+    "\n",
+    "outcome_2023 = (outcome_2023\n",
+    "                .set_index(\"rank\")\n",
+    "                .drop(columns=[\"fpts\", \"fpts_decimal\", \"fpts_against\", \n",
+    "                               \"fpts_against_decimal\", \"wins\", \"losses\"]))\n",
+    "print(outcome_2023.to_markdown())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 304,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<table border=\"1\" class=\"dataframe\">\n",
+      "  <thead>\n",
+      "    <tr style=\"text-align: right;\">\n",
+      "      <th></th>\n",
+      "      <th>1</th>\n",
+      "      <th>2</th>\n",
+      "      <th>3</th>\n",
+      "      <th>4</th>\n",
+      "      <th>5</th>\n",
+      "      <th>6</th>\n",
+      "      <th>7</th>\n",
+      "      <th>8</th>\n",
+      "      <th>9</th>\n",
+      "      <th>10</th>\n",
+      "      <th>11</th>\n",
+      "      <th>12</th>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>username</th>\n",
+      "      <th></th>\n",
+      "      <th></th>\n",
+      "      <th></th>\n",
+      "      <th></th>\n",
+      "      <th></th>\n",
+      "      <th></th>\n",
+      "      <th></th>\n",
+      "      <th></th>\n",
+      "      <th></th>\n",
+      "      <th></th>\n",
+      "      <th></th>\n",
+      "      <th></th>\n",
+      "    </tr>\n",
+      "  </thead>\n",
+      "  <tbody>\n",
+      "    <tr>\n",
+      "      <th>herbietime</th>\n",
+      "      <td>5191110</td>\n",
+      "      <td>2466258</td>\n",
+      "      <td>1263125</td>\n",
+      "      <td>638384</td>\n",
+      "      <td>281700</td>\n",
+      "      <td>108655</td>\n",
+      "      <td>38014</td>\n",
+      "      <td>10242</td>\n",
+      "      <td>2192</td>\n",
+      "      <td>300</td>\n",
+      "      <td>20</td>\n",
+      "      <td>0</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>thezirconisdragon</th>\n",
+      "      <td>2074697</td>\n",
+      "      <td>2171155</td>\n",
+      "      <td>2116925</td>\n",
+      "      <td>1910464</td>\n",
+      "      <td>908055</td>\n",
+      "      <td>432684</td>\n",
+      "      <td>211870</td>\n",
+      "      <td>104144</td>\n",
+      "      <td>44943</td>\n",
+      "      <td>18354</td>\n",
+      "      <td>6032</td>\n",
+      "      <td>677</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>pacc</th>\n",
+      "      <td>1301049</td>\n",
+      "      <td>2361512</td>\n",
+      "      <td>2587268</td>\n",
+      "      <td>2017290</td>\n",
+      "      <td>952164</td>\n",
+      "      <td>439508</td>\n",
+      "      <td>200778</td>\n",
+      "      <td>89029</td>\n",
+      "      <td>34619</td>\n",
+      "      <td>12850</td>\n",
+      "      <td>3618</td>\n",
+      "      <td>315</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>alecwilson</th>\n",
+      "      <td>1209358</td>\n",
+      "      <td>2309450</td>\n",
+      "      <td>2423388</td>\n",
+      "      <td>2001998</td>\n",
+      "      <td>1123941</td>\n",
+      "      <td>556264</td>\n",
+      "      <td>243843</td>\n",
+      "      <td>95928</td>\n",
+      "      <td>28520</td>\n",
+      "      <td>6519</td>\n",
+      "      <td>771</td>\n",
+      "      <td>20</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>empireyikesback</th>\n",
+      "      <td>100340</td>\n",
+      "      <td>300327</td>\n",
+      "      <td>652351</td>\n",
+      "      <td>1275076</td>\n",
+      "      <td>2215778</td>\n",
+      "      <td>2300439</td>\n",
+      "      <td>1551716</td>\n",
+      "      <td>906495</td>\n",
+      "      <td>443471</td>\n",
+      "      <td>187408</td>\n",
+      "      <td>59043</td>\n",
+      "      <td>7556</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>therealfergus</th>\n",
+      "      <td>79027</td>\n",
+      "      <td>231050</td>\n",
+      "      <td>524234</td>\n",
+      "      <td>1112273</td>\n",
+      "      <td>2232044</td>\n",
+      "      <td>2101218</td>\n",
+      "      <td>1603096</td>\n",
+      "      <td>1077066</td>\n",
+      "      <td>611100</td>\n",
+      "      <td>301181</td>\n",
+      "      <td>112416</td>\n",
+      "      <td>15295</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>mackjyers21</th>\n",
+      "      <td>29770</td>\n",
+      "      <td>97803</td>\n",
+      "      <td>239929</td>\n",
+      "      <td>529663</td>\n",
+      "      <td>1024433</td>\n",
+      "      <td>1574398</td>\n",
+      "      <td>2006172</td>\n",
+      "      <td>2136204</td>\n",
+      "      <td>1266054</td>\n",
+      "      <td>688986</td>\n",
+      "      <td>334023</td>\n",
+      "      <td>72565</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>burgertownthicnred</th>\n",
+      "      <td>12441</td>\n",
+      "      <td>50768</td>\n",
+      "      <td>148201</td>\n",
+      "      <td>374902</td>\n",
+      "      <td>863380</td>\n",
+      "      <td>1594773</td>\n",
+      "      <td>2346878</td>\n",
+      "      <td>2212003</td>\n",
+      "      <td>1351781</td>\n",
+      "      <td>705852</td>\n",
+      "      <td>291124</td>\n",
+      "      <td>47897</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>shakylegs</th>\n",
+      "      <td>1832</td>\n",
+      "      <td>8321</td>\n",
+      "      <td>27895</td>\n",
+      "      <td>79198</td>\n",
+      "      <td>204288</td>\n",
+      "      <td>428686</td>\n",
+      "      <td>818694</td>\n",
+      "      <td>1486333</td>\n",
+      "      <td>2669906</td>\n",
+      "      <td>2335301</td>\n",
+      "      <td>1514670</td>\n",
+      "      <td>424876</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>namebrant</th>\n",
+      "      <td>340</td>\n",
+      "      <td>2944</td>\n",
+      "      <td>13802</td>\n",
+      "      <td>46325</td>\n",
+      "      <td>136744</td>\n",
+      "      <td>302059</td>\n",
+      "      <td>591635</td>\n",
+      "      <td>1072327</td>\n",
+      "      <td>1910769</td>\n",
+      "      <td>2822535</td>\n",
+      "      <td>2315996</td>\n",
+      "      <td>784524</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>tonygordzilla22</th>\n",
+      "      <td>36</td>\n",
+      "      <td>403</td>\n",
+      "      <td>2825</td>\n",
+      "      <td>14000</td>\n",
+      "      <td>54992</td>\n",
+      "      <td>151888</td>\n",
+      "      <td>361161</td>\n",
+      "      <td>736419</td>\n",
+      "      <td>1446341</td>\n",
+      "      <td>2425927</td>\n",
+      "      <td>3904713</td>\n",
+      "      <td>901295</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>black8yellownation</th>\n",
+      "      <td>0</td>\n",
+      "      <td>9</td>\n",
+      "      <td>57</td>\n",
+      "      <td>427</td>\n",
+      "      <td>2481</td>\n",
+      "      <td>9428</td>\n",
+      "      <td>26143</td>\n",
+      "      <td>73810</td>\n",
+      "      <td>190304</td>\n",
+      "      <td>494787</td>\n",
+      "      <td>1457574</td>\n",
+      "      <td>7744980</td>\n",
+      "    </tr>\n",
+      "  </tbody>\n",
+      "</table>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# prints the records count in markdown\n",
+    "print(records_df_count.astype(str).to_html())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
