--- a/2023WinDistribution.ipynb
+++ b/2023WinDistribution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 489,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,13 +16,12 @@
     "import time\n",
     "import random\n",
     "import multiprocessing as mp\n",
-    "from threading import Thread\n",
     "from multiprocessing_functions import simulate_schedules, get_ranking"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 490,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 491,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 492,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,32 +64,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 488,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "week  matchup_id\n",
-       "1     1             2\n",
-       "      2             2\n",
-       "      3             2\n",
-       "      4             2\n",
-       "      5             2\n",
-       "                   ..\n",
-       "14    2             2\n",
-       "      3             2\n",
-       "      4             2\n",
-       "      5             2\n",
-       "      6             2\n",
-       "Name: roster_id, Length: 84, dtype: int64"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Gets regular season matchup data\n",
     "matchups = (sleepy.get_matchups(league_id, season=True)\n",
@@ -106,9 +82,7 @@
     "                    left_on=\"roster_id\",\n",
     "                      right_on = \"roster_id\")\n",
     "            .assign(matchup_id = matchups[\"matchup_id\"].astype(int))\n",
-    "            .drop(columns=\"index\"))\n",
-    "\n",
-    "matchups.groupby([\"week\", \"matchup_id\"])[\"roster_id\"].count()"
+    "            .drop(columns=\"index\"))"
    ]
   },
   {
@@ -394,16 +368,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Creates the shared data stuctures to hold results from different processors\n",
     "manager = mp.Manager()\n",
     "total_records = manager.dict()\n",
     "ranking_counts = manager.dict()\n",
-    "progress_queue = mp.Queue()\n",
-    "\n",
     "for username in owners[\"username\"]:\n",
     "    total_records[username] = manager.list(np.zeros(12, dtype=int))\n",
     "\n",
+    "# Simulates schedules using multiple processors\n",
     "if __name__ == \"__main__\":\n",
     "\n",
+    "    # Sets the number of simulations\n",
     "    num_sims_per_process = 10000  # Number of simulations per process\n",
     "    num_processes = 1000  # Number of processes (cores) to use\n",
     "    total_sims = num_sims_per_process * num_processes\n",
@@ -412,10 +387,12 @@
     "\n",
     "    for p in range(num_processes):\n",
     "\n",
+    "        # Continues while at the maximum number of active processes\n",
     "        while len(processes) >= mp.cpu_count():\n",
     "            time.sleep(1)\n",
     "            processes = [p for p in processes if p.is_alive()]\n",
     "\n",
+    "        # When there is less than the max number of processess, start a new one\n",
     "        process = mp.Process(\n",
     "            target = simulate_schedules,\n",
     "            args = (all_weeks, similar_weeks, owners, matchup_to_roster_id, matchups, owners_points, total_records, ranking_counts, num_sims_per_process)\n",
@@ -423,9 +400,11 @@
     "        process.start()\n",
     "        processes.append(process)\n",
     "\n",
+    "    # Join remaining processes\n",
     "    for process in processes:\n",
     "        process.join()\n",
     "\n",
+    "# Formats and stores the results in CSVs\n",
     "tot_rec = {username: pd.Series(list(lst), index = range(1,13)) \n",
     "           for username, lst in dict(total_records).items()}\n",
     "\n",
@@ -448,15 +427,6 @@
     "\n",
     "playoffs_df.to_csv(f'{YEAR}_{total_sims}_simulated_playoffs.csv',\n",
     "                    index = False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "playoffs_df"
    ]
   },
   {
@@ -4047,7 +4017,7 @@
    ],
    "source": [
     "# The ranking with the smallest combined chance of greater than or equal to in\n",
-    "# the first six rankings\n",
+    "# the first three rankings\n",
     "idx_unlikely = ge_df_prob.iloc[:,:3].sum(axis = 1).idxmin()\n",
     "unlikely_top_3 = (pd.concat(\n",
     "    [playoffs_df.iloc[idx_unlikely,:12].rename(\"Username\"),\n",
@@ -4911,7 +4881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 487,
    "metadata": {},
    "outputs": [
     {
@@ -4921,7 +4891,6 @@
       "<table border=\"1\" class=\"dataframe\">\n",
       "  <thead>\n",
       "    <tr style=\"text-align: right;\">\n",
-      "      <th></th>\n",
       "      <th>Rank</th>\n",
       "      <th>Username</th>\n",
       "      <th>Better</th>\n",
@@ -4932,7 +4901,6 @@
       "  </thead>\n",
       "  <tbody>\n",
       "    <tr>\n",
-      "      <th>0</th>\n",
       "      <td>1</td>\n",
       "      <td>pacc</td>\n",
       "      <td>0.00</td>\n",
@@ -4941,103 +4909,92 @@
       "      <td>96.59</td>\n",
       "    </tr>\n",
       "    <tr>\n",
-      "      <th>1</th>\n",
       "      <td>2</td>\n",
       "      <td>thezirconisdragon</td>\n",
-      "      <td>20.71</td>\n",
-      "      <td>21.78</td>\n",
-      "      <td>57.51</td>\n",
+      "      <td>20.75</td>\n",
+      "      <td>21.71</td>\n",
+      "      <td>57.54</td>\n",
       "      <td>96.14</td>\n",
       "    </tr>\n",
       "    <tr>\n",
-      "      <th>2</th>\n",
       "      <td>3</td>\n",
       "      <td>herbietime</td>\n",
-      "      <td>76.61</td>\n",
-      "      <td>12.61</td>\n",
-      "      <td>10.78</td>\n",
-      "      <td>99.52</td>\n",
+      "      <td>76.57</td>\n",
+      "      <td>12.63</td>\n",
+      "      <td>10.80</td>\n",
+      "      <td>99.49</td>\n",
       "    </tr>\n",
       "    <tr>\n",
-      "      <th>3</th>\n",
       "      <td>4</td>\n",
       "      <td>alecwilson</td>\n",
-      "      <td>59.47</td>\n",
-      "      <td>20.05</td>\n",
-      "      <td>20.48</td>\n",
-      "      <td>96.26</td>\n",
+      "      <td>59.42</td>\n",
+      "      <td>20.02</td>\n",
+      "      <td>20.56</td>\n",
+      "      <td>96.24</td>\n",
       "    </tr>\n",
       "    <tr>\n",
-      "      <th>4</th>\n",
       "      <td>5</td>\n",
       "      <td>empireyikesback</td>\n",
-      "      <td>23.23</td>\n",
-      "      <td>22.25</td>\n",
-      "      <td>54.51</td>\n",
-      "      <td>68.50</td>\n",
+      "      <td>23.28</td>\n",
+      "      <td>22.16</td>\n",
+      "      <td>54.56</td>\n",
+      "      <td>68.44</td>\n",
       "    </tr>\n",
       "    <tr>\n",
-      "      <th>5</th>\n",
       "      <td>6</td>\n",
       "      <td>burgertownthicnred</td>\n",
-      "      <td>14.49</td>\n",
-      "      <td>15.96</td>\n",
-      "      <td>69.55</td>\n",
-      "      <td>30.45</td>\n",
+      "      <td>14.50</td>\n",
+      "      <td>15.95</td>\n",
+      "      <td>69.56</td>\n",
+      "      <td>30.44</td>\n",
       "    </tr>\n",
       "    <tr>\n",
-      "      <th>6</th>\n",
       "      <td>7</td>\n",
       "      <td>therealfergus</td>\n",
-      "      <td>62.76</td>\n",
-      "      <td>16.09</td>\n",
-      "      <td>21.15</td>\n",
-      "      <td>62.76</td>\n",
+      "      <td>62.80</td>\n",
+      "      <td>16.03</td>\n",
+      "      <td>21.17</td>\n",
+      "      <td>62.80</td>\n",
       "    </tr>\n",
       "    <tr>\n",
-      "      <th>7</th>\n",
       "      <td>8</td>\n",
       "      <td>mackjyers21</td>\n",
-      "      <td>55.01</td>\n",
-      "      <td>21.39</td>\n",
-      "      <td>23.59</td>\n",
-      "      <td>34.90</td>\n",
+      "      <td>55.02</td>\n",
+      "      <td>21.36</td>\n",
+      "      <td>23.62</td>\n",
+      "      <td>34.96</td>\n",
       "    </tr>\n",
       "    <tr>\n",
-      "      <th>8</th>\n",
       "      <td>9</td>\n",
       "      <td>shakylegs</td>\n",
-      "      <td>30.40</td>\n",
-      "      <td>26.83</td>\n",
-      "      <td>42.77</td>\n",
-      "      <td>7.47</td>\n",
+      "      <td>30.55</td>\n",
+      "      <td>26.70</td>\n",
+      "      <td>42.75</td>\n",
+      "      <td>7.50</td>\n",
       "    </tr>\n",
       "    <tr>\n",
-      "      <th>9</th>\n",
       "      <td>10</td>\n",
       "      <td>tonygordzilla22</td>\n",
-      "      <td>27.64</td>\n",
-      "      <td>24.27</td>\n",
-      "      <td>48.09</td>\n",
+      "      <td>27.68</td>\n",
+      "      <td>24.26</td>\n",
+      "      <td>48.06</td>\n",
       "      <td>2.24</td>\n",
       "    </tr>\n",
       "    <tr>\n",
-      "      <th>10</th>\n",
       "      <td>11</td>\n",
       "      <td>black8yellownation</td>\n",
-      "      <td>7.98</td>\n",
-      "      <td>14.62</td>\n",
-      "      <td>77.40</td>\n",
+      "      <td>7.97</td>\n",
+      "      <td>14.58</td>\n",
+      "      <td>77.45</td>\n",
       "      <td>0.12</td>\n",
       "    </tr>\n",
       "    <tr>\n",
-      "      <th>11</th>\n",
       "      <td>12</td>\n",
       "      <td>namebrant</td>\n",
-      "      <td>92.17</td>\n",
-      "      <td>7.83</td>\n",
+      "      <td>92.15</td>\n",
+      "      <td>7.85</td>\n",
       "      <td>0.00</td>\n",
-      "      <td>5.04</td>\n",
+      "      <td>5.02</td>\n",
       "    </tr>\n",
       "  </tbody>\n",
       "</table>\n"
@@ -5045,8 +5002,10 @@
     }
    ],
    "source": [
+    "# Prints season_probs in html\n",
     "print(season_probs.reset_index().rename(columns={\"rank\":\"Rank\",\n",
-    "                                                 \"username\":\"Username\"}).to_html())"
+    "                                                 \"username\":\"Username\"})\n",
+    "                                                 .to_html(index=False))"
    ]
   },
   {
@@ -5146,6 +5105,7 @@
     }
    ],
    "source": [
+    "# Prints most_likely_ranking in html\n",
     "print(most_likely_ranking.to_html(index=False))"
    ]
   },
@@ -5246,6 +5206,7 @@
     }
    ],
    "source": [
+    "# Prints unlikely_top_3 in html\n",
     "print(unlikely_top_3.to_html(index=False))"
    ]
   },
@@ -5346,15 +5307,9 @@
     }
    ],
    "source": [
+    "# Prints unlikely_playoff_seed2 in html\n",
     "print(unlikely_playoff_seed2.to_html(index=False))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
