--- a/src/2022SimulatedSchedules.ipynb
+++ b/src/2022SimulatedSchedules.ipynb
@@ -429,7 +429,7 @@
     "                                'level_9': 10, 'level_10': 11, 'level_11': 12})\n",
     "               .sort_values(by = 'Count', ascending = False))\n",
     "\n",
-    "path_to_data = f'../{YEAR}SimulatedSchedules/data/'\n",
+    "path_to_data = r'../2023SimulatedSchedules/data/'\n",
     "records_df.to_csv(path_to_data + f'{YEAR}_{total_sims}_simulated_records.csv',\n",
     "                   index_label = 'username')\n",
     "\n",
@@ -5338,7 +5338,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.undefined"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
